# PlantDoctor-SensorLab-v2

./: .gitignore  README.md  pyproject.toml
docs/: changelog.md  codemap.md  project_state.md  roadmap.md  todo.md  visualization.md
docs/milestones/: M01.md
src/playground/E01_first_mesh/: main.py
src/playground/E02_laplace/: main.py
